crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__return__after_if.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/after_if.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (if
            true
            (return "ok")
            ∅)))
   (print (call +4 (global f @3))))

----- stderr -----
