crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__return__in_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/in_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method method [(local this @0)] []
         (block
            (return "ok")
            (print "bad"))))
   (print (call +4 (attr (call +4 (global Foo @3)) method))))

----- stderr -----
