crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__return__return_nil_if_no_value.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/return_nil_if_no_value.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (return ∅)
         (print "bad")))
   (print (call +4 (global f @3))))

----- stderr -----
